CDO NEWS
--------

Version 1.5.0 (?? March 2011):

   Fixed bugs:
     * sellonlatbox: does not work as expected when selecting all longitutes
     * detrend: integer overflow; wrong result for nts > 46340
     * spcut: only correct results with continuous wave numbers starting at 1
     * remaplib: fix data race in calculation of bin_addr (OpenMP)

Version 1.4.7 (06 January 2011):

   New features:
     * improved support for netCDF output from WRF model (import time and grid variables)
   New operators:
     * ydayadd, ydaysub, ydaymul, ydaydiv: Multi-year daily arithmetic
     * eca_pd: Precipitation days index per time period
     * dv2ps: Divergence and vorticity to velocity potential and stream function
   Changed operators:
     * import_cmsaf: added time information also for time constant fields
   Fixed bugs:
     * eof: fix memory access violation
     * eofcoeff: fix memory access violation
     * fldmean: gives wrong result for grid units [radian]
     * Yseasstat: bug fix for datasets with time constant fields
     * sellevel: fix problem with hybrid model levels and netCDF output
     * sellonlatbox: fix rounding error of the last lon index
     * Settime: bug fix for time independent variables in combination with other operators (pipes)

Version 1.4.6 (17 September 2010):

   New features:
     * Using libtool for linking (rpath)
     * Changed predefined gaussian grid names from t<RES>grid to n<N>
       Use n80 instead of t106grid to define a Gaussian N80 grid
     * Changed percentile parameter type from integer to float
   New operators:
     * bandpass: Bandpass filtering
     * lowpass:  Lowpass filtering
     * highpass: Highpass filtering
   Changed operators:
     * eca_gsl: adjust implementation to fit definition by ECA
     * expr, exprf: added missing values support
   Fixed bugs:
     * sellevel: copy zaxis meta data name and units
     * seldate: open output file only when time steps found