@@ -3,6 +3,8 @@ CDO NEWS
 
 Version 1.5.0 (?? March 2011):
 
+   New features:
+     * Added support for netCDF level bounds
    Fixed bugs:
      * sellonlatbox: does not work as expected when selecting all longitutes
      * detrend: integer overflow; wrong result for nts > 46340
